# streamripper

./: .dockerignore  .gitattributes  .gitignore  BUILDING.md  CHANGES  CMakeLists.txt  Dockerfile.alpine  INSTALL  README  README.md  build-linux.sh  build-macos.sh  streamripper-debug-log.txt  streamripper.1  streamripper.1.asc
console/: sr_cdk.h  streamripper.c
lib/: CMakeLists.txt  argv.c  callback.c  cbuf3.c  charset.c  debug.c  errors.c  errors.h  external.c  filelib.c  filelib.h  findsep.c  findsep.h  findsep2.c  http.c  http.h  list.h  mchar.c  prefs.c  relaylib.c  rip_hls.c  rip_hls.h  rip_manager.c  rip_manager.h  ripogg.c  ripstream.c  ripstream_mp3.c  ripstream_ogg.c  socklib.c  socklib.h  sr_compat.h  sr_stdint.h  srconfig.h  srtypes.h  threadlib.c  track_info.c  utf8.c  wav_output.c  wav_output.h
